<resources>
    <string name="app_name">SkinPlush</string>

    <string name="lbl_register_now">Register now</string>
    <string name="lbl_registration">Registration</string>
    <string name="lbl_scanning">Scanning</string>
    <string name="lbl_result">Result</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_step_2" translatable="false">Step 2</string>
    <string name="lbl_step_3" translatable="false">Step 3</string>
    <string name="lbl_step_1" translatable="false">Step 1</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_e_mail">E-mail</string>
    <string name="lbl_enter_email">Enter your E-mail</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_repeat_password">Repeat Password</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_already_have_an_account_login">Already have an account? Login</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_forgot_passsword">Forgot Passsword?</string>
    <string name="lbl_don_t_have_an_account_signup">Don\'t have an account? SignUp</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_scan">Scan</string>
    <string name="lbl_read_more">Read More</string>
    <string name="lbl_results">Result</string>
    <string name="lbl_loading">Loading</string>


    <string name="error_blank_name">Name is required</string>
    <string name="error_internet">Please check your Internet Connection</string>
    <string name="error_short_name">Name is too short</string>
    <string name="error_blank_dob">Date of Birth is required</string>
    <string name="error_blank_email">Email is required</string>
    <string name="error_format_email">Email format is invalid</string>
    <string name="error_password_blank">Password is required</string>
    <string name="error_length_password">Password should be of at least 6 characters</string>
    <string name="error_repeat_pass_req">Repeat Password is required</string>
    <string name="error_password_match">Password and Repeat Password do not match</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>