<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_register"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            tools:context=".activities.RegisterActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/lbl_registration"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_solid"
                android:hint="@string/lbl_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_solid"
                android:hint="@string/lbl_e_mail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_solid"
                android:hint="@string/lbl_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/edit_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button_solid"
                android:hint="@string/lbl_repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                tools:ignore="Autofill" />

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_stroke"
        android:text="@string/lbl_register" />

    <TextView
        android:id="@+id/tv_go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="@string/lbl_already_have_an_account_login" />

</RelativeLayout>

