<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingBottom="24dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        tools:context=".activities.RegisterActivity">

        <TextView
            android:id="@+id/lbl_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/lbl_login"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_solid"
            android:hint="@string/lbl_e_mail"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_button_solid"
            android:hint="@string/lbl_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_forgot_passsword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button_stroke"
            android:text="@string/lbl_login" />

        <TextView
            android:id="@+id/tv_go_to_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_don_t_have_an_account_signup"
            android:textAlignment="center" />

    </LinearLayout>


</ScrollView>
